<resources>
    <string name="app_name"><font fgcolor='#000000'>WIDETECH</font></string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido_a">BIENVENIDO A</string>
    <string name="WIDE">WIDE</string>
    <string name="TECH"> TECH</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuarioemail">Usuario o email</string>
    <string name="iniciarSesion">Iniciar sesión</string>
    <string name="registrarme">Ya tengo una cuenta</string>
    <string name="confirmar_emergencia">CONFIRMAR EMERGENCIA</string>
    <string name="iluminacion">Iluminacion:</string>
    <string name="noFields">Oops! Parece que no has completado todos los campos.</string>
    <string name="noInternet">No estás conectado a internet, inténtalo más tarde</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="nuestrosProductosTitle">Nuestros productos</string>
    <string name="perfilTitle">Perfil</string>
    <string name="contactoTitle">Contáctenos</string>
    <string name="title_activity_main">MainActivity</string>


</resources>